# CS112-Semester-Project

./: CMakeLists.txt  CityData.txt  README.md  main.cpp
CS112-B Semester Project Data/Lahore/: Lhr_Detail_100.txt  Lhr_Detail_101.txt  Lhr_Detail_102.txt  Lhr_Detail_103.txt  Lhr_Detail_104.txt  Lhr_Detail_94.txt  Lhr_Detail_95.txt  Lhr_Detail_96.txt  Lhr_Detail_97.txt  Lhr_Detail_98.txt  Lhr_Detail_99.txt  Lhr_Detail_MS_101.txt  Lhr_Detail_MS_102.txt  Lhr_Detail_MS_103.txt  Lhr_Detail_MS_104.txt  Lhr_Student_100.txt  Lhr_Student_101.txt  Lhr_Student_102.txt  Lhr_Student_103.txt  Lhr_Student_104.txt  Lhr_Student_94.txt  Lhr_Student_95.txt  Lhr_Student_96.txt  Lhr_Student_97.txt  Lhr_Student_98.txt  Lhr_Student_99.txt  Lhr_Student_MS_101.txt  Lhr_Student_MS_102.txt  Lhr_Student_MS_103.txt  Lhr_Student_MS_104.txt  Transfer.txt
CS112-B Semester Project Data/Peshawar/: BS_P_100_Reg.txt  BS_P_100_Student.txt  BS_P_101_Reg.txt  BS_P_101_Student.txt  BS_P_102_Reg.txt  BS_P_102_Student.txt  BS_P_103_Reg.txt  BS_P_103_Student.txt  BS_P_104_Reg.txt  BS_P_104_Student.txt  (+20 more)
GenderIdentification/: GenderClassifier.pickle  generatePickle.py  script.py
include/: CSV.h  Cities.h  Course.h  CourseErrorFlag.h  CourseHelper.h  CourseList.h  CourseMap.h  Date.h  Miscellaneous.h  Student.h  StudentErrorFlag.h  StudentHelper.h  StudentList.h  StudentMap.h
src/: CSV.cpp  Cities.cpp  Course.cpp  CourseErrorFlag.cpp  CourseHelper.cpp  CourseList.cpp  CourseMap.cpp  Date.cpp  Miscellaneous.cpp  Student.cpp  StudentErrorFlag.cpp  StudentHelper.cpp  StudentList.cpp  StudentMap.cpp
(+2 files in other folders)
